scrollbar added, bug: non scrolla

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -4,3 +4,25 @@
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
 }
+
+.item{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.item:hover{
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
+}
+
+.item:focus{
+    outline: none;
+    background-color: rgba(255 , 255, 255, .1);
+}
+
+.listina{
+    overflow-y: scroll !important;
+}
+
